#
# Copyright (c) 2025 Pavel Vasin
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with this program. If not, see <https://www.gnu.org/licenses/>.
#

network_main_includes = [
    logging_main_includes,
    io_main_includes,
    crypto_main_includes,
    time_main_includes,
    codec_main_includes,
    compat_main_includes,
    include_directories('.')
]
network_main_dependencies = [
    logging_main_dependencies,
    io_main_dependencies,
    crypto_main_dependencies,
    time_main_dependencies,
    codec_main_dependencies,
    compat_main_dependencies,
    boost_dependency,
    fmt_dependency,
]
